--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>The Rich Tip Collection</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images\x-icon\favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images\x-icon\favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images\x-icon\favicon-16x16.png">
     <link rel="manifest" href="images/x-icon/site.webmanifest">
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -18,26 +17,20 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/x-icon/favicon-32x32.png" alt="logo" />
+            <img src="images\x-icon\android-chrome-192x192.png" alt="logo" />
           </a>
         </div>
         <div class="menu">
+          
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img src="images/header/discord.webp" alt="Discord" />
-          </a>
-          <a
-            href="https://twitter.com/CodeCats10k"
+            href="https://twitter.com/RichTipMedia"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/therichtipcollection"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -55,7 +48,7 @@
         <ul
           id="countdown"
           class="count-down"
-          data-date="Feb 17, 2022 4:00:00 PM UTC"
+          data-date="Feb 23, 2022 2:23:00 PM UTC"
         >
           <li class="clock-item">
             <span class="count-number days">20</span>
@@ -79,9 +72,9 @@
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
                
-        <p>A new batch of cute cats will be available very soon!</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+        <p>Make sure to follow us to not miss out on the free giveaways!</p>
+        <a href="https://twitter.com/RichTipMedia" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+          ><span>Be a part of The Rich Tip Collection!</span>
         </a>
       </div>
     </section>
